[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/global/controlsManager.gd" type="Script" id=1]

[node name="Controls" type="Node"]
script = ExtResource( 1 )

[node name="IntervalTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="IntervalSwitchTimer" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[connection signal="timeout" from="IntervalSwitchTimer" to="." method="_on_IntervalSwitchTimer_timeout"]
